test/files/neg/t4728-lead-star.check
t4728-lead-star.scala:13: error: ambiguous reference to overloaded definition,
both method f in object Ambiguous of type (ys: Y*)Int
and  method f in object Ambiguous of type (x: X)Int
match argument types (Y) and expected result type Any
    println(Ambiguous.f(new Y))
                      ^
one error found
